CAS005 ThanhPV fix bug: 99499

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/cas005.a.main.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/cas005.a.main.css
@@ -26,3 +26,7 @@ button.nts-switch-button {
 #combo-box.ui-igcombo-wrapper {
 	width: 220px !important;
 }
+
+#contents-area .fixed-flex-layout-right{
+	margin-top: 40px;
+}
