--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/005/a/index.xhtml
@@ -9,13 +9,11 @@
 		<ui:define name="htmlHead">
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="../../../ccg/025/component/component.css" />
-			<com:scriptfile
-				path="../../../ccg/025/component/component.service.js" />
+			<com:scriptfile path="../../../ccg/025/component/component.service.js" />
 			<com:scriptfile path="../../../ccg/025/component/component.vm.js" />
 			<!-- ccg026 -->
 			<com:stylefile path="../../../ccg/026/component/component.css" />
-			<com:scriptfile
-				path="../../../ccg/026/component/component.service.js" />
+			<com:scriptfile path="../../../ccg/026/component/component.service.js" />
 			<com:scriptfile path="../../../ccg/026/component/component.vm.js" />
 
 			<com:stylefile path="cas005.a.main.css" />
