--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/026/component/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/026/component/index.xhtml
@@ -24,7 +24,7 @@
 					<td><div data-bind="text: displayName"
 							class="limited-label description"></div></td>
 					<td class="halign-center"><div
-							data-bind="attr: {tabindex: $parent.setting.tabindex}, ntsCheckBox: {checked: availability}"></div></td>
+							data-bind="attr: {tabindex: $parent.setting.tabindex}, ntsCheckBox: {checked: availability, enable: $parent.enable}"></div></td>
 					<td><div data-bind="text: description"
 							class="limited-label description"></div></td>
 				</tr>
