KMK006 Coding company

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/b.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/b.xhtml
@@ -12,7 +12,9 @@
 		<ui:define name="extended-action-bar">
 			<button tabindex="1" class="proceed"
 				data-bind="click: saveCompanyAutoCal">#{i18n.getText('KMK006_9')}</button>
+
 			<button tabindex="2" data-bind="click: openDialogUsageSettingModel">#{i18n.getText('KMK006_11')}</button>
+			<button tabindex="-1" data-bind="click: exportExcel">#{i18n.getText('KMK006_47')}</button>
 		</ui:define>
 	
 		<ui:define name="extended-222">
