Fix bug #126444, text resource QMM041

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/index.xhtml
@@ -49,7 +49,7 @@
                         <div tabindex="2"
                              id="B1_7"
                              data-bind="ntsRadioBoxGroup: {
-                                name:'#[#QMM041_22]',
+                                name:'#[QMM041_22]',
                                 options: takeOverItem,
                                 optionsValue: 'value',
                                 optionsText: 'name',
@@ -62,7 +62,7 @@
         <div id="functions-area-bottom">
             <!--B2_1 決定-->
             <button tabindex="3" class="x-large proceed" data-bind="click: addNewHistory, enable: $root.errors.isEmpty">
-                #{i18n.getText('#QMM041_25')}
+                #{i18n.getText('QMM041_25')}
             </button>
             <!--B2_2 キャンセル-->
             <button tabindex="4" class="large" data-bind="click: cancel">
