--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/a/index.xhtml
@@ -70,8 +70,8 @@
                                 value: selectedCode,
                                 name: '#[QMM041_8]',
                                 columns: [
-                                    {headerText: '#{i18n.getText('#QMM041_8')}', key: 'code', width: 50},
-                                    {headerText: '#{i18n.getText('#QMM041_9')}', key: 'name', formatter: _.escape}
+                                    {headerText: '#{i18n.getText('QMM041_8')}', key: 'code', width: 50},
+                                    {headerText: '#{i18n.getText('QMM041_9')}', key: 'name', formatter: _.escape}
                                 ]}"/>
                         </div>
                         <!--A4_1 履歴選択パネル-->
@@ -108,7 +108,7 @@
                 <div class="fixed-flex-layout-right right-content">
                     <div class="control-group valign-center row">
                         <!--A5_1 コード・名称-->
-                        <div id="A5_1" data-bind="ntsFormLabel: {}">#{i18n.getText('#QMM041_15')}</div>
+                        <div id="A5_1" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM041_15')}</div>
                         <!--A5_2 コード-->
                         <span class="label" data-bind="text: personalUnitPriceCode"/>
                         <!--A5_3 名称-->
@@ -117,7 +117,7 @@
                     </div>
                     <div class="control-group valign-center row">
                         <!--A5_4 期間-->
-                        <div id="A5_4" data-bind="ntsFormLabel: {}">#{i18n.getText('#QMM041_16')}</div>
+                        <div id="A5_4" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM041_16')}</div>
                         <!--A5_5 履歴開始年月-->
                         <span class="label" data-bind="text: startYearMonth"/>
                         <!--A5_6 ～-->
@@ -127,7 +127,7 @@
                     </div>
                     <div class="control-group valign-center row">
                         <!--A5_8 金額-->
-                        <div id="A5_8" data-bind="ntsFormLabel: {required: true}">#{i18n.getText('#QMM041_18')}</div>
+                        <div id="A5_8" data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM041_18')}</div>
                         <!--A5_9 金額-->
                         <input id="A5_9" tabindex="10" data-bind="ntsNumberEditor: {
                             value: currencyValue,
