--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/qmm041.b.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/041/b/qmm041.b.style.css
@@ -13,3 +13,9 @@
 #B1_7 label:first-child {
     margin-bottom: 10px;
 }
+
+.B1_7 {
+    display: inline-flex;
+    width: 270px;
+    margin-top: 10px;
+}
