CCG018: fix bug #98970

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/a1/ccg018.a1.main.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/018/a1/ccg018.a1.main.css
@@ -50,8 +50,9 @@
 
 .table1 th.tbl-th {
 	border: 1px solid #999999;
-	background-color: #E0F59E;
+	background-color: #CFF1A5;
 	height: 25px;
+    font-weight: bold;
 }
 
 .table1 td.tbl-td {
