--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/016/a/index.xhtml
@@ -75,7 +75,7 @@
                                 data-bind="click: createNewHistory, enable: updateMode()">#{i18n.getText('QMM008_8')}</button>
                         <!--A2_5 履歴編集ボタン-->
                         <button style="float: right" id="A2_5" tabindex="9"
-                                data-bind="click: editHistory, enable: updateMode()">#{i18n.getText('QMM008_9')}</button>
+                                data-bind="click: editHistory, enable: selectedWageTableIdentifier().length > 3">#{i18n.getText('QMM008_9')}</button>
                     </div>
                     <div style="margin-top: 15px;">
                         <!--A2_6 賃金テーブル一覧	-->
@@ -84,7 +84,6 @@
                                rows: 15,
                                dataSource: wageTableTreeList,
                                value: selectedWageTableIdentifier,
-                               initialExpandDepth: 0,
                                primaryKey: 'identifier',
                                childDataKey: 'histories',
                                primaryText: 'nodeText',
@@ -255,99 +254,99 @@
 
                     </div>
                     <div class="tab-content-2">
-<!--                         <div data-bind = "if: $vm.selectedWageTable().elementSetting()==0"><ui:include src="b.xhtml" /></div> -->
-<!--                         <div data-bind = "if: $vm.selectedWageTable().elementSetting()==1"><ui:include src="c.xhtml" /></div> -->
-<!--                         <div data-bind = "if: $vm.selectedWageTable().elementSetting()==2"><ui:include src="d.xhtml" /></div> -->
-<!--                         <div data-bind = "visible: $vm.selectedWageTable().elementSetting()==3"><div> -->
-<!--                             <div class="flex valign-center tab-row"> -->
-<!--                                 <div style="width: 110px;" -->
-<!--                                      data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_8')}</div> -->
-<!--                                 <div style="width: 200px;" data-bind="with: selectedWageTable"> -->
-<!--                                     <div style="display: inline-block" data-bind="text: wageTableCode"></div> -->
-<!--                                     <div style="display: inline-block; margin-left: 10px;" -->
-<!--                                          data-bind="text: wageTableName"></div> -->
-<!--                                 </div> -->
-<!--                                 <div style="width: 110px;" -->
-<!--                                      data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_26')}</div> -->
-<!--                                 <div data-bind="with: selectedHistory"> -->
-<!--                                     <div style="display: inline-block" data-bind="text: startMonth"></div> -->
-<!--                                     <div style="display: inline-block; margin-left: 5px;">#{i18n.getText('QMM016_31')}</div> -->
-<!--                                     <div style="display: inline-block; margin-left: 5px;" data-bind="text: endMonth"></div> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                             <hr></hr> -->
-<!--                             <div class="tab-row"> -->
-<!--                                 <div style="width: 70px; vertical-align: top" -->
-<!--                                      data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_22')}</div> -->
-<!--                                 <div class="fixed-table-container"> -->
-<!--                                     <table class="custom-fixed-table normal-fixed-table" data-bind = "with: selectedWageTable().elementInformation().oneDimensionElement"> -->
-<!--                                         <colgroup> -->
-<!--                                             <col width="30px"/> -->
-<!--                                             <col width="220px"/> -->
-<!--                                         </colgroup> -->
-<!--                                         <thead> -->
-<!--                                         <tr> -->
-<!--                                             <th class="ui-widget-header"></th> -->
-<!--                                             <th class="ui-widget-header">#{i18n.getText('QMM016_22')}</th> -->
-<!--                                         </tr> -->
-<!--                                         </thead> -->
-<!--                                         <tbody> -->
-<!--                                         <tr> -->
-<!--                                             <td class="ui-widget-header">#{i18n.getText('QMM016_29')}</td> -->
-<!--                                             <td><div>#{i18n.getText('QMM016_50')}</div></td> -->
-<!--                                         </tr> -->
-<!--                                         </tbody> -->
-<!--                                     </table> -->
-<!--                                 </div> -->
-<!--                             </div> -->
-<!--                             <div class="tab-row" style = "margin-left: 75px; width: 500px; text-align: center;"> -->
-<!--                                 <button data-bind = "click: $vm.createWageTable" style = "width: 400px;" class = "caret-bottom large-caret">#{i18n.getText('QMM016_35')}</button> -->
-<!--                             </div> -->
-<!--                             <div class="tab-row" style = "margin-top: 40px;"> -->
-<!--                                 <div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_36')}</div> -->
-<!--                                 <button style = "margin-left: 30px;">#{i18n.getText('QMM016_37')}</button> -->
-<!--                             </div> -->
-<!--                             <hr></hr> -->
-<!--                             <div class="tab-row" style = "margin-top: 40px;" data-bind="if: $vm.wageTableContent().payment().length >0"> -->
-<!--                                 <table id = "E5_1"> -->
-<!--                                     <colgroup> -->
-<!--                                         <col width="100px"/> -->
-<!--                                         <col width="130px"/> -->
-<!--                                         <col width="70px"/> -->
-<!--                                         <col width="400px"/> -->
-<!--                                     </colgroup> -->
-<!--                                     <thead> -->
-<!--                                     <tr> -->
-<!--                                         <th class = "ui-widget-header">#{i18n.getText('QMM016_49')}</th> -->
-<!--                                         <th class = "ui-widget-header">#{i18n.getText('QMM016_50')}</th> -->
-<!--                                         <th class = "ui-widget-header">#{i18n.getText('QMM016_38')}</th> -->
-<!--                                         <th class = "ui-widget-header">#{i18n.getText('QMM016_51')}</th> -->
-<!--                                     </tr> -->
-<!--                                     </thead> -->
-<!--                                     <tbody data-bind = "foreach: $vm.wageTableContent().qualificationGroupSetting()"> -->
-<!--                                     <com:ko bind="eligibleQualification()" tag="foreach"> -->
-<!--                                         <tr > -->
-<!--                                             <td class = "ui-widget-header" data-bind = "visible: $index() ==0, attr: {rowspan: $parent.eligibleQualification().length}, text: $parent.qualificationGroupName"> -->
-<!--                                             </td> -->
-<!--                                             <td></td> -->
-<!--                                             <td class = "ui-widget-header"> -->
-<!--                                                 <div data-bind = "text: qualificationName"></div> -->
-<!--                                             </td> -->
-<!--                                             <td> -->
-<!--                                                 10000 -->
-<!--                                             </td> -->
-<!--                                             <td data-bind = "visible: $index() ==0, attr: {rowspan: $parent.eligibleQualification().length}, text: $parent.displayPaymentMethod"> -->
+                        <div data-bind = "if: $vm.selectedWageTable().elementSetting()==0"><ui:include src="b.xhtml" /></div>
+                        <div data-bind = "if: $vm.selectedWageTable().elementSetting()==1"><ui:include src="c.xhtml" /></div>
+                        <div data-bind = "if: $vm.selectedWageTable().elementSetting()==2"><ui:include src="d.xhtml" /></div>
+                        <div data-bind = "visible: $vm.selectedWageTable().elementSetting()==3"><div>
+                            <div class="flex valign-center tab-row">
+                                <div style="width: 110px;"
+                                     data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_8')}</div>
+                                <div style="width: 200px;" data-bind="with: selectedWageTable">
+                                    <div style="display: inline-block" data-bind="text: wageTableCode"></div>
+                                    <div style="display: inline-block; margin-left: 10px;"
+                                         data-bind="text: wageTableName"></div>
+                                </div>
+                                <div style="width: 110px;"
+                                     data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_26')}</div>
+                                <div data-bind="with: selectedHistory">
+                                    <div style="display: inline-block" data-bind="text: startMonth"></div>
+                                    <div style="display: inline-block; margin-left: 5px;">#{i18n.getText('QMM016_31')}</div>
+                                    <div style="display: inline-block; margin-left: 5px;" data-bind="text: endMonth"></div>
+                                </div>
+                            </div>
+                            <hr></hr>
+                            <div class="tab-row">
+                                <div style="width: 70px; vertical-align: top"
+                                     data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM016_22')}</div>
+                                <div class="fixed-table-container">
+                                    <table class="custom-fixed-table normal-fixed-table" data-bind = "with: selectedWageTable().elementInformation().oneDimensionElement">
+                                        <colgroup>
+                                            <col width="30px"/>
+                                            <col width="220px"/>
+                                        </colgroup>
+                                        <thead>
+                                        <tr>
+                                            <th class="ui-widget-header"></th>
+                                            <th class="ui-widget-header">#{i18n.getText('QMM016_22')}</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td class="ui-widget-header">#{i18n.getText('QMM016_29')}</td>
+                                            <td><div>#{i18n.getText('QMM016_50')}</div></td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="tab-row" style = "margin-left: 75px; width: 500px; text-align: center;">
+                                <button data-bind = "click: $vm.createWageTable" style = "width: 400px;" class = "caret-bottom large-caret">#{i18n.getText('QMM016_35')}</button>
+                            </div>
+                            <div class="tab-row" style = "margin-top: 40px;">
+                                <div data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM016_36')}</div>
+                                <button style = "margin-left: 30px;">#{i18n.getText('QMM016_37')}</button>
+                            </div>
+                            <hr></hr>
+                            <div class="tab-row" style = "margin-top: 40px;" data-bind="if: $vm.wageTableContent().payment().length >0">
+                                <table id = "E5_1">
+                                    <colgroup>
+                                        <col width="100px"/>
+                                        <col width="130px"/>
+                                        <col width="70px"/>
+                                        <col width="400px"/>
+                                    </colgroup>
+                                    <thead>
+                                    <tr>
+                                        <th class = "ui-widget-header">#{i18n.getText('QMM016_49')}</th>
+                                        <th class = "ui-widget-header">#{i18n.getText('QMM016_50')}</th>
+                                        <th class = "ui-widget-header">#{i18n.getText('QMM016_38')}</th>
+                                        <th class = "ui-widget-header">#{i18n.getText('QMM016_51')}</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody data-bind = "foreach: $vm.wageTableContent().qualificationGroupSetting()">
+                                    <com:ko bind="eligibleQualification()" tag="foreach">
+                                        <tr >
+                                            <td class = "ui-widget-header" data-bind = "visible: $index() ==0, attr: {rowspan: $parent.eligibleQualification().length}, text: $parent.qualificationGroupName">
+                                            </td>
+                                            <td></td>
+                                            <td class = "ui-widget-header">
+                                                <div data-bind = "text: qualificationName"></div>
+                                            </td>
+                                            <td>
+                                                10000
+                                            </td>
+                                            <td data-bind = "visible: $index() ==0, attr: {rowspan: $parent.eligibleQualification().length}, text: $parent.displayPaymentMethod">
 
-<!--                                             </td> -->
+                                            </td>
 
-<!--                                             <td></td> -->
-<!--                                         </tr> -->
-<!--                                     </com:ko> -->
-<!--                                     </tbody> -->
-<!--                                 </table> -->
-<!--                             </div> -->
-<!--                         </div></div> -->
-<!--                         <div data-bind = "if: $vm.selectedWageTable().elementSetting()==4"><ui:include src="f.xhtml" /></div> -->
+                                            <td></td>
+                                        </tr>
+                                    </com:ko>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div></div>
+                        <div data-bind = "if: $vm.selectedWageTable().elementSetting()==4"><ui:include src="f.xhtml" /></div>
 
                     </div>
                 </div>
