--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/006/g/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kdw/006/g/index.xhtml
@@ -27,10 +27,10 @@
 					data-bind="ntsLinkButton: { action: jumpTo.bind($data, sideBar) }">#{i18n.getText('KDW006_25')}</a>
 				<!-- G1_2 -->
 				<button id="register-button" class="proceed" tabindex="2"
-					data-bind="click: saveData, enable: employmentList().length>0" style="margin-left: 85px;">#{i18n.getText('KDW006_26')}</button>
+					data-bind="click: saveData, enable: employmentList().length>0" >#{i18n.getText('KDW006_26')}</button>
 				<!-- G5_1 -->
 				<button id="copy-button" class="normal" tabindex="3"
-					data-bind="click: copyData" style="margin-left: 85px;">#{i18n.getText('KDW006_52')}</button>
+					data-bind="click: copyData" >#{i18n.getText('KDW006_52')}</button>
 			</div>
 			<div id="contents-area">
 				<div id="screen-g">
