update for show time on error page

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/system/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/system/index.xhtml
@@ -19,7 +19,10 @@
 		</ui:define>
 
 		<ui:define name="content">
-			<div id="contents-area" class="cf">
+			<div id="contents-area" class="cf"> 
+				<div id="error-time">
+					<label data-bind="text: errorAtTime"></label>
+				</div>
 				<div id="error-message">
 					ご迷惑をおかけして申し訳ございません。処理の実行中に問題が発生しました。<br /> 管理者へご連絡ください。
 				</div>
