--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/common.error.style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/common.error.style.css
@@ -4,6 +4,11 @@
 
 #error-message {
 	font-size: 17pt;
-	margin-top: 50px;
+	margin-top: 30px;
 	margin-bottom: 50px;
+}
+#error-time {
+	text-align: right;
+    padding-top: 10px;
+    padding-right: 10px;
 }
