--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/b.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/006/a/b.xhtml
@@ -14,7 +14,7 @@
 				data-bind="click: saveCompanyAutoCal">#{i18n.getText('KMK006_9')}</button>
 
 			<button tabindex="2" data-bind="click: openDialogUsageSettingModel">#{i18n.getText('KMK006_11')}</button>
-			<button tabindex="-1" data-bind="click: exportExcel">#{i18n.getText('KMK006_47')}</button>
+			<button tabindex="-1" data-bind="click: function(){exportExcel('AutomaticCalculationSetting','自動計算の登録-会社')}">#{i18n.getText('KMK006_47')}</button>
 		</ui:define>
 	
 		<ui:define name="extended-222">
