--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/025/a/index.xhtml
@@ -30,6 +30,7 @@
             <button tabindex="1" class="proceed" data-bind="click: registerAmount">#{i18n.getText('QMM025_1')}</button>
             <!--A1_2-->
             <button tabindex="2" data-bind="click: test, enable: true">#{i18n.getText('QMM025_2')}</button>
+            <button tabindex="2" data-bind="click: test2, enable: true">#{i18n.getText('QMM025_2')}</button>
             <!--A1_3-->
             <a class="goout" tabindex="3"
                data-bind="ntsLinkButton: { action: jumpToCps001 }">#{i18n.getText('QMM025_3')}</a>
