--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
@@ -64,6 +64,7 @@
                                                             name: '#[QMM019_43]',
                                                             value: newStartMonth,
                                                             required: true,
+                                                            enable: itemHistoryEdit() == 1,
                                                             dateFormat: 'yearmonth'}"></div>
                         <!-- 終了年月 -->
                         <label id="C1_13">  #{i18n.getText('QMM019_44')}</label>
