Fig bug #126496, #126498 QMM042

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
@@ -30,7 +30,7 @@
             <a tabindex="11" class="goout" style="margin-left: 900px"
                data-bind="ntsLinkButton: { jump: '../../041/a/index.xhtml' }">#{i18n.getText('QMM042_14')}</a>
         </div>
-        <div style="margin-left: 20px" id="com-ccg001"/>
+        <div id="com-ccg001"/>
         <div id="contents-area" class=" fixed-flex-layout">
             <div id="panel-left" class="fixed-flex-layout-left margin-top fixed-flex-layout"
                  style="margin-left: 100px; margin-top: 30px; ">
