--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/j/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/002/j/index.xhtml
@@ -10,11 +10,10 @@
 		<ui:define name="htmlHead">
 			<script>var dialogSize = { width: 575, height: 500 };</script>
 			<com:ValidatorScript>
-			                     nts.uk.ctx.exio.dom.exo.dataformat.init.DataFormatCharacterDigit
-			                     nts.uk.ctx.exio.dom.exo.dataformat.init.DataFormatNullReplacement
-			                     nts.uk.ctx.exio.dom.exo.dataformat.init.DataTypeFixedValue
-			
-			             </com:ValidatorScript>
+				nts.uk.ctx.exio.dom.exo.dataformat.init.DataFormatCharacterDigit
+			    nts.uk.ctx.exio.dom.exo.dataformat.init.DataFormatNullReplacement
+			    nts.uk.ctx.exio.dom.exo.dataformat.init.DataTypeFixedValue
+		  </com:ValidatorScript>
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="../share/model.js" />
 			<com:scriptfile path="cmf002.j.vm.js" />
@@ -71,8 +70,8 @@
 						<div class="div-table-col-medium">
 							<div id="J3" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF002_170')}</div>
 						</div>
-						<div id="J3_1" tabindex="4" class="div-table-col-standard">
-							<div
+						<div id="J3_1" class="div-table-col-standard">
+							<div tabindex="4"
 								data-bind="ntsRadioBoxGroup: {
 									options: $vm.codeEditingItem,
 									optionsValue: 'code',
@@ -143,8 +142,8 @@
 						<div class="div-table-col-medium">
 							<div id="J6" data-bind="ntsFormLabel: { }">#{i18n.getText('CMF002_157')}</div>
 						</div>
-						<div id="J6_1" tabindex="9" class="div-table-col-standard">
-							<div
+						<div id="J6_1" class="div-table-col-standard">
+							<div tabindex="9"
 								data-bind="ntsRadioBoxGroup: {
 									options: $vm.nullValueReplaceItem,
 									optionsValue: 'code',
